<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/row_vd_from_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_from_date"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_vd_to_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_to_date"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_vd_item_discount_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_from_amt"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_vd_item_discount_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_to_amt"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_vd_item_discount_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_discount"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_vd_item_discount_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_discount_amount"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_vd_item_discount_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_discount_price"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_vd_volume_discount_exclude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_exclude"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>