<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/date"
            android:textStyle="bold"
            android:textColor="#000000"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_categoryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/category_name"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txt_fromQty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/from_quantity"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txt_toQty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/to_quantity"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txt_fromAmt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_from_amt"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txt_toAmt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_to_amt"
            android:textStyle="bold"
            android:textColor="#000000" />


        <TextView
            android:id="@+id/txt_discountCategoryPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vd_discount"
            android:textStyle="bold"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>