<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/date"
            android:textStyle="bold"
            android:textColor="#000000"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/product_name"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/fromQty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/from_quantity"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/toQty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/to_quantity"
            android:textStyle="bold"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/promotion_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/promotion_price"
            android:textStyle="bold"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>