<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customer_list_bg"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">

    <TextView
            android:id="@+id/sx_info_row_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:text="@string/product"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/sx_info_row_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/qty"
            android:textStyle="bold" />

    <TextView
            android:id="@+id/sx_info_row_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/price"
            android:textStyle="bold" />
</LinearLayout>
